--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<a class="grid__item" href="#preview-11">
 						<div class="box">
 							<div class="box__shadow"></div>
-							<img class="box__img" src="img/of.png" alt="image is loading"/>
+							<img class="box__img" src="img/OF.png" alt="image is loading"/>
 							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">ofxTramontana</span></h4>
 						</div>
 					</a>
@@ -208,7 +208,7 @@
 				<div class="overlay__item" id="preview-11">
 					<div class="box">
 						<div class="box__shadow"></div>
-						<img class="box__img box__img--original" src="img/of.png" alt="image is loading"/>
+						<img class="box__img box__img--original" src="img/OF.png" alt="image is loading"/>
 						<h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">ofxTramontana</span></h4>
 					</div>
 					<p class="overlay__content">Android content goes here.</p>
