--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>tramontana</title>
-		<meta name="description" content="tramontana leverages the capabilities of the object that we have all come to carry with us anywhere, all the time, our smartphone. What used to involve complex tasks like networking, native app development, etc. can now be created with a single sketch on your computer." />
-		<meta name="keywords" content="interactive spaces, tramontana, sensors, libraries, processing, openFrameworks, wekinator" />
-		<meta name="author" content="Wind People" />
+		<meta name="description" content=" What used to involve complex tasks like networking, native app development, etc. can now be created with a single sketch on your computer." />
+		<meta name="keywords" content="interactive spaces, tramontana, sensors, libraries, processing, openFrameworks, interaction design, design, prototyping" />
+		<meta name="author" content="tramontana team" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this website in a modern browser that supports CSS Variables.");</script>
