library processing link fix

--- a/subPages/Downloads.html
+++ b/subPages/Downloads.html
@@ -24,13 +24,13 @@
     font-style: normal;
 }
 body {
-
+  
   font-size: 14px;
   line-height: 1.6;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #ececec;
-  padding: 30px;
+  padding: 30px; 
   font-family: 'Museo Sans 100', 'Museo Sans 500', sans-serif;
 }
 
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
   cursor: text;
-  position: relative;
+  position: relative; 
   font-family: 'Museo Sans 500','Helvetica', sans-serif;
 }
 
@@ -491,24 +491,24 @@ pre[class*="language-"] {
 <h6 id="toc_1">tramontana app:</h6>
 
 <ul>
-<li><a target="_blank"  href="https://apps.apple.com/us/app/id1121069555">iOS/tvOS</a></li>
-<li><a target="_blank"  href="https://play.google.com/store/apps/details?id=com.pierdr.pierluigidallarosa.myactivity">Android</a></li>
-<li><a target="_blank"  href="https://itunes.apple.com/us/app/tramontana/id1257425018?ls=1&amp;mt=12">macOS</a></li>
+<li><a href="https://apps.apple.com/us/app/id1121069555">iOS/tvOS</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=com.pierdr.pierluigidallarosa.myactivity">Android</a></li>
+<li><a href="https://itunes.apple.com/us/app/tramontana/id1257425018?ls=1&amp;mt=12">macOS</a></li>
 </ul>
 
 <h6 id="toc_2">tramontanaCV app:</h6>
 
 <ul>
-<li><a target="_blank"  href="https://apps.apple.com/in/app/tramontanacv/id1276040950">iOS</a></li>
+<li><a href="https://apps.apple.com/in/app/tramontanacv/id1276040950">iOS</a></li>
 <li>Android coming soon</li>
 </ul>
 
 <h6 id="toc_3">tramontana libraries:</h6>
 
 <ul>
-<li><a target="_blank"  href="https://pierdr.github.io/Tramontana-for-Processing/#download">Processing</a></li>
-<li><a target="_blank"  href="https://pierdr.github.io/Tramontana-for-Javascript/">Javascript</a></li>
-<li><a target="_blank"  href="https://github.com/pierdr/ofxTramontana">openFrameworks</a></li>
+<li><strong>Processing</strong>: You can download tramontana from the Contribution Manager. If you want to download the zip file click <a href="https://github.com/tramontanaixd/processing-library/Tramontana.zip">here</a>. </li>
+<li><a href="https://pierdr.github.io/Tramontana-for-Javascript/">Javascript</a></li>
+<li><a href="https://github.com/pierdr/ofxTramontana">openFrameworks</a></li>
 </ul>
 
 
